@@ -59,34 +59,33 @@ typedef struct {
 	int count;
 } QRRawCode;
 
-static void RSblock_initBlock(RSblock *block, int dl, unsigned char *data, int el, unsigned char *ecc, RS *rs)
+static void RSblock_initBlock(RSblock *block, int dl, unsigned char *data, int el, unsigned char *ecc)
 {
 	block->dataLength = dl;
 	block->data = data;
 	block->eccLength = el;
 	block->ecc = ecc;
 
-	encode_rs_char(rs, data, ecc);
+	encode_rs_char(data, ecc);
 }
 
 static int RSblock_init(RSblock *blocks, int spec[5], unsigned char *data, unsigned char *ecc)
 {
-	int i;
+	int i, ret;
 	RSblock *block;
 	unsigned char *dp, *ep;
-	RS *rs;
 	int el, dl;
 
 	dl = QRspec_rsDataCodes1(spec);
 	el = QRspec_rsEccCodes1(spec);
-	rs = init_rs(8, 0x11d, 0, 1, el, 255 - dl - el);
-	if(rs == NULL) return -1;
+	ret = init_rs(8, 0x11d, 0, 1, el, 255 - dl - el);
+	if(ret < 0) return -1;
 
 	block = blocks;
 	dp = data;
 	ep = ecc;
 	for(i=0; i<QRspec_rsBlockNum1(spec); i++) {
-		RSblock_initBlock(block, dl, dp, el, ep, rs);
+		RSblock_initBlock(block, dl, dp, el, ep);
 		dp += dl;
 		ep += el;
 		block++;
@@ -96,10 +95,10 @@ static int RSblock_init(RSblock *blocks, int spec[5], unsigned char *data, unsig
 
 	dl = QRspec_rsDataCodes2(spec);
 	el = QRspec_rsEccCodes2(spec);
-	rs = init_rs(8, 0x11d, 0, 1, el, 255 - dl - el);
-	if(rs == NULL) return -1;
+	ret = init_rs(8, 0x11d, 0, 1, el, 255 - dl - el);
+	if(ret < 0) return -1;
 	for(i=0; i<QRspec_rsBlockNum2(spec); i++) {
-		RSblock_initBlock(block, dl, dp, el, ep, rs);
+		RSblock_initBlock(block, dl, dp, el, ep);
 		dp += dl;
 		ep += el;
 		block++;
@@ -209,7 +208,7 @@ __STATIC void MQRraw_free(MQRRawCode *raw);
 __STATIC MQRRawCode *MQRraw_new(QRinput *input)
 {
 	MQRRawCode *raw;
-	RS *rs;
+	int ret;
 
 	raw = (MQRRawCode *)malloc(sizeof(MQRRawCode));
 	if(raw == NULL) return NULL;
@@ -229,13 +228,13 @@ __STATIC MQRRawCode *MQRraw_new(QRinput *input)
 		return NULL;
 	}
 
-	rs = init_rs(8, 0x11d, 0, 1, raw->eccLength, 255 - raw->dataLength - raw->eccLength);
-	if(rs == NULL) {
+	ret = init_rs(8, 0x11d, 0, 1, raw->eccLength, 255 - raw->dataLength - raw->eccLength);
+	if(ret < 0) {
 		MQRraw_free(raw);
 		return NULL;
 	}
 
-	encode_rs_char(rs, raw->datacode, raw->ecccode);
+	encode_rs_char(raw->datacode, raw->ecccode);
 
 	raw->count = 0;
 
