@@ -33,7 +33,7 @@
 
 typedef struct _RS RS;
 
-extern RS *init_rs(int symsize, int gfpoly, int fcr, int prim, int nroots, int pad);
-extern void encode_rs_char(RS *rs, const unsigned char *data, unsigned char *parity);
+extern int init_rs(int symsize, int gfpoly, int fcr, int prim, int nroots, int pad);
+extern void encode_rs_char(const unsigned char *data, unsigned char *parity);
 
 #endif /* __RSCODE_H__ */
